--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,5 +6,6 @@
   <%= link_to "Edit this topic", edit_topic_path(@topic) %> |
   <%= link_to "Back to topics", topics_path %>
 
-  <%= button_to "Destroy this topic", @topic, method: :delete %>
+  <%= button_to "Destroy this topic", @topic,
+                method: :delete, data:{turbo_confirm: 'Are you sure'} %>
 </div>
