--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div>
+    <%= form.label :tag_ids %>
+    <%= form.collection_check_boxes :tag_ids, Tag.all, :id, :name  %>
+  </div>
+
+  <div>
     <%= form.text_field :topic_id, type: :hidden%>
   </div>
 
