--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,36 @@
 <p style="color: green"><%= notice %></p>
 
+<!--post-->
 <%= render @post %>
 
 <div>
   <%= link_to "Edit this post", edit_topic_post_path(params[:topic_id], @post) %> |
   <%= link_to "Back to posts", topic_posts_path(params[:topic_id]) %>
-
-  <%= button_to "Destroy this post", topic_post_path(params[:topic_id], @post), method: :delete %>
+  <%= button_to "Destroy this post", topic_post_path(params[:topic_id], @post),
+                method: :delete, data:{turbo_confirm: 'Are you sure'  } %>
 </div>
+
+
+<!--comments-->
+<div>
+  <div>
+    <% @post.comments.each do |comment| %>
+      <%= link_to render('comments/comment', comment: comment),
+                  topic_post_comment_path(params[:topic_id], @post, comment) %>
+    <% end %>
+  </div>
+  <div>
+    <%= render 'comments/form', comment: @post.comments.new %>
+  </div>
+</div>
+
+<!--tags-->
+<td>
+  <small>
+    <%=
+      raw @post.tags.map(&:name).map {
+        |t| link_to ('#').concat(t), list_tagged_posts_path(t)
+      }.join(' ')
+    %>
+  </small>
+</td>
