--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @topic %>
+<%= render 'posts/list_posts' %>
 
 <div>
   <%= link_to "Edit this topic", edit_topic_path(@topic) %> |
