--- a/app/views/posts/_list_posts.html.erb
+++ b/app/views/posts/_list_posts.html.erb
@@ -3,11 +3,16 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <div>
-      <%= link_to (render post) , topic_post_path(post.topic_id, post) %>
-    </div>
+    <%= render post %>
+    <p>
+      <%= link_to "Show this post", topic_post_path(post.topic, post) %>
+    </p>
   <% end %>
 </div>
 <% if params[:topic_id]%>
   <%= link_to "New post", new_topic_post_path(params[:topic_id]) %>
 <%end %>
+
+<div>
+  <%= pagy_nav(@pagy).html_safe%>
+</div>
