--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,7 @@
 <div id="<%= dom_id comment %>">
   <p>
-    <%= comment.content %>
+    <%= comment.content %> |-
+    <%= comment.user.email %>
   </p>
 
 </div>
