--- a/app/views/posts/_list_posts.html.erb
+++ b/app/views/posts/_list_posts.html.erb
@@ -3,24 +3,17 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <p>
-      <%= Post.post_read_status(post, current_user) %>
-    </p>
-    <p>
-      <strong>Headline:</strong>
-      <%= post.headline %>
-    </p>
 
-    <p>
-      <strong>Content:</strong>
-      <%= truncate post.content,length: 50, omission: '...Read More' %>
-    </p>
-    <%=link_to "Show this post" , topic_post_path(post.topic, post)%>
+    <div id="postdiv<%= post.id%>">
+      <%= render 'posts/post_container', post: post%>
+    </div>
   <% end %>
 </div>
 <% if @topic.present?%>
-  <%= link_to "New post", new_topic_post_path(@topic) %>
+  <%= link_to "New post", new_topic_post_path(@topic), remote: true %>
 <%end %>
+
+<p id="new-user-form"></p>
 
 <div>
   <%= pagy_nav(@pagy).html_safe%>
