--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,1 +1,6 @@
-$("#new-user-form").append("<%= escape_javascript render('form', post:@post) %>")
+let x = document.getElementById("new-user-form")
+$(x).show()
+$(x).html("<%= escape_javascript render('form', post:@post) %>")
+$('#submit-button').on("click", function (){
+    $('#loader').show()
+})
