elimination of n+1 queries done

--- a/app/views/posts/_post_container.html.erb
+++ b/app/views/posts/_post_container.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= Post.post_read_status(post, current_user) %>
+  <%= post.users.include?(current_user) %>
 </p>
 <p>
   <strong>Headline:</strong>
