--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,8 @@
 <p>Find me in app/views/home/index.html.erb</p>
 <span>
   <%if user_signed_in? %>
+    <%=link_to 'See All Topics', topics_path %>|
+    <%=link_to 'See All Posts', posts_path %>|
     <%=link_to 'Sign Out', destroy_user_session_path, data: {turbo_confirm: 'Are you sure?',turbo_method: :delete} %>|
     <%=link_to 'Edit Profile', edit_user_registration_path %>
   <%else %>
